/*
 * $Id$
 */

2010-07-12 11:08 UTC-0400 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/AddressBook/AddressBook.prg
     * UI cleanup

2010-06-30 13:08 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  *  wxharbour.bkl
  +  include/wxHarbour/wxbase/wx_SplitterWindow.h
  +  src/wxbase/containers
  +  src/wxbase/containers/wx_SplitterWindow.cpp
  +  src/wxbase/containers/wxhSplitterWindow.prg
     + new class (partial) added:
       + wxSplitterWindow

  *  demos/AddressBook/AddressBook.prg
  *  demos/AddressBook/Tbl_Name.prg
     * enhanced demo (work in progress)

2010-06-28 16:15 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  +  src/common/wx_err.cpp
     + wx_err.cpp source added, contains calls to RT errors

  *  include/wxHarbour/wxh.h
     + added prototype for RT error on wrong number of params passed

  *  samples/grid/grid.prg
     % enhanced sample

  *  src/hrbcompat/tbrowse/wxhBrowse.prg
  *  src/hrbcompat/tbrowse/wxhBrowseDbProvider.prg
     * removed decrement on DeleteCols/DeleteRows param call

  *  src/wxbase/advctrls/wx_Grid.cpp
  *  src/wxbase/advctrls/wx_GridTableBase.cpp
     ! Fixed param checking and RT error for this
     ! Fixed to convert from 1 based lists (HB) to 0 based lists (c++)

2010-06-26 10:49 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/AddressBook/AddressBook.prg
  *  demos/AddressBook/BaseBrowse.prg
  *  demos/AddressBook/Database.prg
  *  demos/AddressBook/Tbl_Address.prg
  *  demos/AddressBook/Tbl_Common.prg
  *  demos/AddressBook/Tbl_Name.prg
  *  demos/dbExplorer/dbExplorer.prg
  *  demos/helloworld/helloworld.prg
  *  include/wxHarbour/defs.ch
  *  include/wxHarbour/dialog.ch
  *  include/wxHarbour/event.ch
  *  include/wxHarbour/property.ch
  *  include/wxHarbour/raddox.ch
  *  include/wxHarbour/rdodefs.h
  *  include/wxHarbour/toplevel.ch